// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Code actions should disable rules for a specific line with a comment on the previous line 1`] = `
"a {
  /* stylelint-disable-next-line indentation */
  font-size: 1.2em;
    /* stylelint-disable-next-line comment-no-empty */
  color: #00;
}
"
`;

exports[`Code actions should disable rules for a specific line with a comment on the same line 1`] = `
"a {
  font-size: 1.2em; /* stylelint-disable-line indentation */
    /* stylelint-disable-next-line comment-no-empty */
  color: #00;
}
"
`;

exports[`Code actions should disable rules for a specific line with a comment on the same line 2`] = `
"#!/usr/bin/env node
/* stylelint-disable color-no-invalid-hex */
/* eslint-disable node/shebang */
'use strict';

const css = css\`
	.foo {
		color: #00;
	}
\`;
"
`;

exports[`Code actions should disable rules for an entire file 1`] = `
"/* stylelint-disable indentation */
a {
  font-size: 1.2em;
    /* stylelint-disable-next-line comment-no-empty */
  color: #00;
}
"
`;

exports[`Code actions should disable rules for an entire file with a shebang 1`] = `
"#!/usr/bin/env node
/* stylelint-disable color-no-invalid-hex */
/* eslint-disable node/shebang */
'use strict';

const css = css\`
	.foo {
		color: #00;
	}
\`;
"
`;

exports[`Code actions should provide code actions for problems 1`] = `
Array [
  Object {
    "edit": Array [
      Array [
        "<uri>",
        Array [
          Object {
            "newEol": undefined,
            "newText": "  /* stylelint-disable-next-line indentation */
",
            "range": Array [
              Object {
                "character": 0,
                "line": 1,
              },
              Object {
                "character": 0,
                "line": 1,
              },
            ],
          },
        ],
      ],
    ],
    "isPreferred": undefined,
    "kind": Z {
      "value": "quickfix",
    },
    "title": "Disable indentation for this line",
  },
  Object {
    "edit": Array [
      Array [
        "<uri>",
        Array [
          Object {
            "newEol": undefined,
            "newText": "/* stylelint-disable indentation */
",
            "range": Array [
              Object {
                "character": 0,
                "line": 0,
              },
              Object {
                "character": 0,
                "line": 0,
              },
            ],
          },
        ],
      ],
    ],
    "isPreferred": undefined,
    "kind": Z {
      "value": "quickfix",
    },
    "title": "Disable indentation for the entire file",
  },
  Object {
    "command": Object {
      "arguments": Array [
        Object {
          "uri": "https://stylelint.io/user-guide/rules/indentation",
        },
      ],
      "command": "stylelint.openRuleDoc",
      "title": "Open documentation for indentation",
    },
    "isPreferred": undefined,
    "kind": Z {
      "value": "quickfix",
    },
    "title": "Show documentation for indentation",
  },
]
`;

exports[`Code actions should run auto-fix action on save 1`] = `
"a {
    font-size: 1.2em;
    /* stylelint-disable-next-line comment-no-empty */
    color: #00;
}
"
`;
